# collectibles-data-pipelines

./: deliverables.md  pyproject.toml  readme.md
airflow/: dbt_collectibles.py
dbt/marts/cards/: _cards.yml  dim_card.sql
dbt/marts/manufacturing/: _manufacturing.yml  fct_batch_performance.sql
dbt/marts/orders/: _orders.yml  fct_orders.sql
dbt/staging/: __sources.yml  _staging.yml  stg_events_backfill.sql  stg_events_stream.sql
snowflake/: ddl.sql  example_queries.sql
